--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>hamcrest-library</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+    </dependency>
   </dependencies>
 </project>
